# Spec-o-Scope

./: CMakeLists.txt  README.md  build.sh  info.sh  setup.sh  teardown.sh
include/: aes.h  aes_attack.h  aes_sbox_sr.h  consts.h  experiments.h  linked_list.h  util.h
include/amplification/: amplification.h
include/ev/: assisted_ev.h  ev.h
include/gates/: classic_bt_gates.h  gates.h  gates_common.h
include/measure/: measure.h
include/primescope/: primescope.h
scripts/: aes_sbox_2msb_new.py  aes_ttable_correlation_score_mp.py  consts.py  paper_gate_type.py  paper_min_distinguish.py  paper_multi_sample_rates.py  paper_pearson_cumulative.py  paper_sbox_msb_oracle.py  paper_sbox_msb_traces.py  paper_sbox_sr_oracle.py  paper_sbox_sr_pearson.py  paper_sbox_sr_traces.py  paper_ttable_msb_oracle.py  paper_ttable_msb_traces.py  paper_ttable_sr_traces.py  paper_witness_threshold.py  test_fetch_graph.py
scripts/AES/: softAES.py
src/: linked_list.cc  util.cc
src/AES/: aes_addons.c
src/AES/sbox/: aes_core.c  test_aes.c
src/AES/ttable/: Makefile  aes_core.c  test_aes.c
src/ev/: assisted_ev.cc  ev.cc
src/experiments/: paper_experiments.cc  test_aes_break.cc  test_aes_break2.cc  test_fetch.cc  test_prime_scope.cc
src/gates/: classic_bt_gates.cc
src/mains/: aes_sbox_victim.cc  aes_ttable_victim.cc  main.cc  min_distinguish_victim.cc  sbox_sr_analysis.cc  ttable_sr_analysis.cc
src/primescope/: primescope.cc
